5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1643_2447.log
== TEST (2019-04-10 18:11:17) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa==pr):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- OUTPUT:
troco de  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:11:46) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pr==pa):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- OUTPUT:
troco de  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:11:55) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pr=pa):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- ERROR:
File "XXXX", line 4
    if (pr=pa):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:12:03) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pr = pa):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- ERROR:
File "XXXX", line 4
    if (pr = pa):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:12:09) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pr == pa):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- OUTPUT:
troco de  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:14:04) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa == pr):
	print("troco de ",tr)
else:
	print("troco de ")
-- OUTPUT:
troco de
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:42) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
if (pa == pr):
	print("troco de ",pa-pr)
else:
	print("troco de nada")
-- OUTPUT:
troco de nada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:59) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
if (pa == pr):
	print(pa-pr)
else:
	print("troco de nada")
-- OUTPUT:
troco de nada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:21:00) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- OUTPUT:
troco de  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:21:06) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- EXECUTION TIME:
0.179948
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de  0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:21:24) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de ",tr)
else:
	print("troco de ",0)
-- OUTPUT:
troco de  0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:21:40) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de",tr)
else:
	print("troco de",0)
-- EXECUTION TIME:
0.163435
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de 0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:21:41) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de",tr)
else:
	print("troco de",0)
-- OUTPUT:
troco de 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:24) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa-pr)
if (pa > pr):
	print("troco de",tr)
else:
	print("troco de",0)
-- EXECUTION TIME:
0.185157
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de 0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:33) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa-pr,2)
if (pa > pr):
	print("troco de",tr)
else:
	print("troco de",0)
-- EXECUTION TIME:
0.138508
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de 0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:25:56) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de"tr)
else:
	print("troco de"0)
-- ERROR:
File "XXXX", line 5
    print("troco de"tr)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:26:08) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	print("troco de",tr)
else:
	print("troco de",0)
-- OUTPUT:
troco de 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:27:25) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	t = ("troco de",tr)
	print(round(t,2))
else:
	t = ("troco de",0)
	print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:22) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:25) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:25) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:25) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:26) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:31) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:37) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = (pa-pr)
if (pa > pr):
	
else:
	t = ("troco de",0)

-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:43:59) 
-- CODE:
,,,,,,
-- EXECUTION TIME:
0.193358
-- ERROR:
  File "/home/codebench/codes/1643/2447/main.py", line 1
    ,,,,,,
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:43:59) 
-- CODE:
,,,,,,
-- ERROR:
File "XXXX", line 1
    ,,,,,,
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:56:14) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr)
ft = round(pr - pa)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:56:43) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:56:55) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:57:04) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- EXECUTION TIME:
0.173516
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:57:23) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:57:30) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:58:10) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("falta",ft)
else:
	print("troco de",tr)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:58:32) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("Falta",ft)
else:
	print("Troco de",tr)
-- EXECUTION TIME:
0.157468
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:04:44) 
-- CODE:
pr = float(input("preco: "))
pa = float(input("pagamento: "))
tr = round(pa - pr ,2)
ft = round(pr - pa ,2)
if (pr > pa):
	print("Falta",ft)
else:
	print("Troco de",tr)
-- EXECUTION TIME:
0.142408
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
